Added download and processing for CMEMS DAC product. Minor changes to other scripts.

--- a/Python_notebooks/BGC_ARGO_Float_download.ipynb
+++ b/Python_notebooks/BGC_ARGO_Float_download.ipynb
@@ -58,6 +58,7 @@
       "Files in /:\n",
       "1101.077.isus\n",
       "1101.087.log\n",
+      "1101.091.msg\n",
       "1101.061.msg\n",
       "1101.003.msg\n",
       "1101.049.msg\n",
@@ -121,6 +122,7 @@
       "1101.059.log\n",
       "1101.074.msg\n",
       ".sxrc\n",
+      "1101.092.log\n",
       "1101.045.log\n",
       "1101.024.log\n",
       "1101.011.log\n",
@@ -205,6 +207,7 @@
       "1101.000.log\n",
       "1101.060.msg\n",
       "1101.050.msg\n",
+      "1101.092.isus\n",
       ".logout\n",
       "1101.060.isus\n",
       "1101.021.log\n",
@@ -231,6 +234,7 @@
       "1101.003.log\n",
       "1101.080.log\n",
       "1101.044.isus\n",
+      "1101.092.msg\n",
       "1101.007.isus\n",
       "1101.059.msg\n",
       "1101.074.log\n",
@@ -241,9 +245,11 @@
       "1101.057.msg\n",
       "1101.064.log\n",
       "1101.063.isus\n",
+      "1101.091.isus\n",
       "1101.2207250303\n",
       "1101.025.msg\n",
       "1101.2207250243.log\n",
+      "1101.091.log\n",
       "1101.063.msg\n",
       "1101.2204261218.log\n",
       "1101.068.log\n",
@@ -383,7 +389,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 91/91 [00:44<00:00,  2.05it/s]\n"
+      "100%|██████████| 93/93 [00:27<00:00,  3.43it/s]\n"
      ]
     },
     {
@@ -396,6 +402,7 @@
       "Files in /:\n",
       "1102.043.isus\n",
       "1102.2207170118\n",
+      "1102.096.log\n",
       "1102.020.msg\n",
       "1102.089.msg\n",
       "1102.087.isus\n",
@@ -495,6 +502,7 @@
       "1102.037.msg\n",
       "1102.035.msg\n",
       "1102.040.msg\n",
+      "1102.096.isus\n",
       "mission.cfg_2022_01_31\n",
       "1102.028.isus\n",
       "1102.018.isus\n",
@@ -516,6 +524,7 @@
       "1102.032.msg\n",
       "1102.2207162246\n",
       "1102.093.msg\n",
+      "1102.097.isus\n",
       "1102.040.isus\n",
       "1102.049.log.tmp\n",
       "logs\n",
@@ -568,6 +577,7 @@
       "1102.044.log\n",
       "1102.095.msg\n",
       "1102.078.isus\n",
+      "1102.096.msg\n",
       "1102.002.log\n",
       "1102.031.msg\n",
       "1102.017.isus\n",
@@ -581,6 +591,7 @@
       "1102.085.isus\n",
       "1102.012.isus\n",
       "1102.062.log\n",
+      "1102.097.log\n",
       "1102.070.msg\n",
       "1102.059.log\n",
       "1102.043.log\n",
@@ -720,6 +731,7 @@
       "1102.083.msg\n",
       "1102.048.isus\n",
       "1102.055.isus\n",
+      "1102.097.msg\n",
       "1102.089.log\n",
       "1102.046.isus\n",
       "1102.052.isus\n",
@@ -737,7 +749,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 96/96 [00:43<00:00,  2.20it/s]"
+      "100%|██████████| 98/98 [00:30<00:00,  3.17it/s]"
      ]
     },
     {
@@ -803,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -850,92 +862,62 @@
       "37   2024-05-19 03:30:37.000365056\n",
       "38   2024-05-29 00:37:19.000053760\n",
       "39   2024-06-07 22:00:42.002360320\n",
+      "40   2024-06-17 20:35:58.002196480\n",
+      "41   2024-06-27 19:19:01.002065920\n",
       "Name: JULD, dtype: datetime64[ns]\n",
       "0    2023-06-19 21:24:08.000001536\n",
       "1    2023-06-20 14:53:21.999997952\n",
       "2    2023-06-20 15:49:36.999996416\n",
       "3    2023-06-21 09:20:51.000007680\n",
       "4    2023-06-21 10:22:20.973590016\n",
-      "5    2023-06-22 03:47:34.029490688\n",
-      "6    2023-06-23 11:31:22.983441408\n",
-      "7    2023-06-26 10:26:05.007869952\n",
-      "8    2023-06-29 10:26:05.007883264\n",
-      "9    2023-07-02 12:18:04.015697408\n",
-      "10   2023-07-05 12:24:05.007753728\n",
-      "11   2023-07-08 12:28:05.007700480\n",
-      "12   2023-07-11 12:30:06.007712256\n",
-      "13   2023-07-14 12:28:06.007929344\n",
-      "14   2023-07-17 12:24:06.999994368\n",
-      "15   2023-07-20 12:24:06.007617024\n",
-      "16   2023-07-23 12:26:06.008079360\n",
-      "17   2023-07-26 12:26:05.007702528\n",
-      "18   2023-07-29 12:24:05.007616000\n",
-      "19   2023-08-01 12:22:05.007527424\n",
-      "20   2023-08-11 12:18:01.014770688\n",
-      "21   2023-08-21 12:14:03.009136128\n",
-      "22   2023-08-31 12:28:01.013916672\n",
-      "23   2023-09-10 12:10:00.013597696\n",
-      "24   2023-09-20 12:26:01.013920256\n",
-      "25   2023-09-30 12:23:59.016468992\n",
-      "26   2023-10-10 12:26:02.011649536\n",
-      "27   2023-10-20 12:24:01.013981696\n",
-      "28   2023-10-30 12:24:01.013813248\n",
-      "29   2023-11-09 12:21:59.017093632\n",
-      "30   2023-11-11 01:21:22.000007680\n",
-      "31   2023-11-20 12:26:00.017507328\n",
-      "32   2023-11-30 12:24:01.011647488\n",
-      "33   2023-12-10 12:20:00.014357504\n",
-      "34   2023-12-20 12:10:00.016301568\n",
-      "35   2023-12-30 12:16:00.016983552\n",
-      "36   2024-01-09 12:21:59.017190912\n",
-      "37   2024-01-19 12:24:00.016798720\n",
-      "38   2024-01-29 12:23:58.018674176\n",
-      "39   2024-02-08 12:16:00.016777728\n",
-      "40   2024-02-18 12:22:01.014595584\n",
-      "41   2024-02-28 03:57:45.017177088\n",
-      "42   2024-03-08 10:01:41.015605760\n",
-      "43   2024-03-17 06:55:31.015987200\n",
-      "44   2024-03-26 04:58:24.014817792\n",
-      "45   2024-03-31 13:27:17.008224768\n",
-      "46   2024-04-05 13:27:15.013304832\n",
-      "47   2024-04-10 13:27:16.008705024\n",
-      "48   2024-04-15 13:21:16.008866304\n",
-      "49   2024-04-20 13:27:16.008936960\n",
-      "50   2024-04-25 13:25:17.008905216\n",
-      "51   2024-04-30 13:31:16.008844288\n",
-      "52   2024-05-05 13:25:17.008790016\n",
-      "53   2024-05-10 13:29:16.008712192\n",
-      "54   2024-05-15 13:09:16.012721152\n",
-      "55   2024-05-20 13:27:17.008475136\n",
-      "56   2024-05-25 13:23:15.013746176\n",
-      "57   2024-05-30 13:27:18.004340224\n",
-      "58   2024-06-04 13:29:15.013093376\n",
-      "59   2024-06-09 13:19:18.004209664\n",
-      "Name: JULD, dtype: datetime64[ns]\n"
+      "                  ...             \n",
+      "60   2024-06-14 13:29:16.008806400\n",
+      "61   2024-06-19 13:25:16.013370368\n",
+      "62   2024-06-24 13:25:17.004186112\n",
+      "63   2024-06-29 13:29:16.008684544\n",
+      "64   2024-07-04 13:27:17.008432128\n",
+      "Name: JULD, Length: 65, dtype: datetime64[ns]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_28104\\2680373930.py:35: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_38440\\1868000719.py:37: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  last_position_df = pd.concat([last_position_df, last_temp_df], ignore_index=True)\n",
-      "C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_28104\\2680373930.py:36: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_38440\\1868000719.py:38: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  position_df = pd.concat([position_df, temp_df], ignore_index=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0   2024-06-22 12:46:00\n",
+      "1   2024-06-23 12:40:00\n",
+      "2   2024-06-24 12:36:00\n",
+      "3   2024-06-25 12:33:00\n",
+      "4   2024-06-26 12:38:00\n",
+      "5   2024-06-27 12:36:00\n",
+      "6   2024-06-30 00:40:00\n",
+      "7   2024-07-02 12:15:00\n",
+      "Name: JULD, dtype: datetime64[ns]\n"
      ]
     }
    ],
    "source": [
     "# Other, WMO, floats\n",
     "\n",
-    "wmo_list = [4903532, 1902637]\n",
+    "wmo_list = [4903532, 1902637, 3901581]\n",
     "#Float 1 = test float in the Icelandic Bassin\n",
     "float_1_url = 'https://data-argo.ifremer.fr/dac/aoml/4903532/4903532_Sprof.nc'\n",
     "#Float 2 = test float on Custard with glider next to it\n",
     "float_2_url = 'https://data-argo.ifremer.fr/dac/coriolis/1902637/1902637_Sprof.nc'\n",
+    "#Float 3 = recent deployment BIOCARBON\n",
+    "float_3_url = 'https://data-argo.ifremer.fr/dac/bodc/3901581/3901581_Sprof.nc'\n",
     "\n",
     "#List the floats\n",
-    "floats_url = [float_1_url, float_2_url]\n",
+    "floats_url = [float_1_url, float_2_url, float_3_url]\n",
     "\n",
     "#Assign the local float directory\n",
     "parent_dir = os.path.abspath(os.path.join(os.getcwd(), os.pardir))\n",
@@ -967,19 +949,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/88 [00:00<?, ?it/s]C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_28104\\1523172333.py:48: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  0%|          | 0/88 [00:00<?, ?it/s]C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_38440\\1523172333.py:48: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  compiled_101 = pd.concat([compiled_101, temp_df], ignore_index= True)\n",
-      "100%|██████████| 88/88 [00:00<00:00, 109.17it/s]\n",
-      "  0%|          | 0/93 [00:00<?, ?it/s]C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_28104\\1523172333.py:65: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "100%|██████████| 88/88 [00:01<00:00, 69.59it/s]\n",
+      "  0%|          | 0/93 [00:00<?, ?it/s]C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_38440\\1523172333.py:65: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  compiled_102 = pd.concat([compiled_102, temp_df], ignore_index= True)\n",
-      "100%|██████████| 93/93 [00:00<00:00, 110.42it/s]\n"
+      "100%|██████████| 93/93 [00:01<00:00, 66.26it/s]\n"
      ]
     }
    ],
@@ -1068,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
