--- a/Python_notebooks/NEODASS_satellite_visualisation_with_autonomy.ipynb
+++ b/Python_notebooks/NEODASS_satellite_visualisation_with_autonomy.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,15 +66,15 @@
     "\n",
     "# Global\n",
     "\n",
-    "start_date = datetime(2024, 6, 20) #YYYY, M, DD\n",
-    "end_date = datetime(2024, 6, 22)\n",
+    "start_date = datetime(2024, 6, 22) #YYYY, M, DD\n",
+    "end_date = datetime(2024, 6, 24)\n",
     "\n",
     "min_lon = -35\n",
     "max_lon = -5\n",
     "min_lat = 55\n",
     "max_lat = 66\n",
     "\n",
-    "zoom_plot    = True\n",
+    "zoom_plot    = False\n",
     "plot_markers = True\n",
     "skip_floats  = False\n",
     "skip_gliders = False\n",
@@ -206,6 +206,9 @@
       "['sla']\n",
       "['sla']\n",
       "['sla']\n",
+      "['sla']\n",
+      "['sla']\n",
+      "['sla']\n",
       "['latitude_longitude', 'CHL_OC4ME']\n",
       "['latitude_longitude', 'CHL_OC4ME']\n",
       "['latitude_longitude', 'CHL_OC4ME']\n",
@@ -272,6 +275,18 @@
       "['latitude_longitude', 'CHL_OC4ME']\n",
       "['latitude_longitude', 'CHL_OC4ME']\n",
       "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'sea_surface_temperature']\n",
+      "['latitude_longitude', 'sea_surface_temperature']\n",
+      "['latitude_longitude', 'sea_surface_temperature']\n",
+      "['latitude_longitude', 'sea_surface_temperature']\n",
+      "['latitude_longitude', 'sea_surface_temperature']\n",
+      "['latitude_longitude', 'sea_surface_temperature']\n",
       "['latitude_longitude', 'sea_surface_temperature']\n",
       "['latitude_longitude', 'sea_surface_temperature']\n",
       "['latitude_longitude', 'sea_surface_temperature']\n",
@@ -370,6 +385,12 @@
       "['latitude_longitude', 'chl_oc5ci']\n",
       "['latitude_longitude', 'chl_oc5ci']\n",
       "['latitude_longitude', 'chl_oc5ci']\n",
+      "['latitude_longitude', 'chl_oc5ci']\n",
+      "['latitude_longitude', 'chl_oc5ci']\n",
+      "['latitude_longitude', 'chl_oc5ci']\n",
+      "['latitude_longitude', 'chl_oc5', 'pic']\n",
+      "['latitude_longitude', 'chl_oc5', 'pic']\n",
+      "['latitude_longitude', 'chl_oc5', 'pic']\n",
       "['latitude_longitude', 'chl_oc5', 'pic']\n",
       "['latitude_longitude', 'chl_oc5', 'pic']\n",
       "['latitude_longitude', 'chl_oc5', 'pic']\n",
@@ -558,6 +579,21 @@
       "    File: olci_b_1km-CHL_OC4ME-1d-20240621_20240621-nrt.nc, Variable: CHL_OC4ME\n",
       "    File: viirs_noaa20-chl_oc5ci-1d-20240621_20240621-nrt.nc, Variable: chl_oc5ci\n",
       "    File: viirs_suomi-chl_oc5_pic-1d-20240621_20240621-nrt.nc, Variable: chl_oc5\n",
+      "  Date: 2024-06-22 00:00:00\n",
+      "    File: olci_a_1km-CHL_OC4ME-1d-20240622_20240622-nrt.nc, Variable: CHL_OC4ME\n",
+      "    File: olci_b_1km-CHL_OC4ME-1d-20240622_20240622-nrt.nc, Variable: CHL_OC4ME\n",
+      "    File: viirs_noaa20-chl_oc5ci-1d-20240622_20240622-nrt.nc, Variable: chl_oc5ci\n",
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240622_20240622-nrt.nc, Variable: chl_oc5\n",
+      "  Date: 2024-06-23 00:00:00\n",
+      "    File: olci_a_1km-CHL_OC4ME-1d-20240623_20240623-nrt.nc, Variable: CHL_OC4ME\n",
+      "    File: olci_b_1km-CHL_OC4ME-1d-20240623_20240623-nrt.nc, Variable: CHL_OC4ME\n",
+      "    File: viirs_noaa20-chl_oc5ci-1d-20240623_20240623-nrt.nc, Variable: chl_oc5ci\n",
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240623_20240623-nrt.nc, Variable: chl_oc5\n",
+      "  Date: 2024-06-24 00:00:00\n",
+      "    File: olci_a_1km-CHL_OC4ME-1d-20240624_20240624-nrt.nc, Variable: CHL_OC4ME\n",
+      "    File: olci_b_1km-CHL_OC4ME-1d-20240624_20240624-nrt.nc, Variable: CHL_OC4ME\n",
+      "    File: viirs_noaa20-chl_oc5ci-1d-20240624_20240624-nrt.nc, Variable: chl_oc5ci\n",
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240624_20240624-nrt.nc, Variable: chl_oc5\n",
       "Temp files:\n",
       "  Date: 2024-05-20 00:00:00\n",
       "    File: slstr_a-sea_surface_temperature-1d-20240520_20240520-nrt.nc, Variable: sea_surface_temperature\n",
@@ -658,6 +694,15 @@
       "  Date: 2024-06-21 00:00:00\n",
       "    File: slstr_a-sea_surface_temperature-1d-20240621_20240621-nrt.nc, Variable: sea_surface_temperature\n",
       "    File: slstr_b-sea_surface_temperature-1d-20240621_20240621-nrt.nc, Variable: sea_surface_temperature\n",
+      "  Date: 2024-06-22 00:00:00\n",
+      "    File: slstr_a-sea_surface_temperature-1d-20240622_20240622-nrt.nc, Variable: sea_surface_temperature\n",
+      "    File: slstr_b-sea_surface_temperature-1d-20240622_20240622-nrt.nc, Variable: sea_surface_temperature\n",
+      "  Date: 2024-06-23 00:00:00\n",
+      "    File: slstr_a-sea_surface_temperature-1d-20240623_20240623-nrt.nc, Variable: sea_surface_temperature\n",
+      "    File: slstr_b-sea_surface_temperature-1d-20240623_20240623-nrt.nc, Variable: sea_surface_temperature\n",
+      "  Date: 2024-06-24 00:00:00\n",
+      "    File: slstr_a-sea_surface_temperature-1d-20240624_20240624-nrt.nc, Variable: sea_surface_temperature\n",
+      "    File: slstr_b-sea_surface_temperature-1d-20240624_20240624-nrt.nc, Variable: sea_surface_temperature\n",
       "Sla files:\n",
       "  Date: 2024-05-20 00:00:00\n",
       "    File: cmems_sea_level-sla-1d-20240520_20240520-nrt.nc, Variable: sla\n",
@@ -725,6 +770,12 @@
       "    File: cmems_sea_level-sla-1d-20240620_20240620-nrt.nc, Variable: sla\n",
       "  Date: 2024-06-21 00:00:00\n",
       "    File: cmems_sea_level-sla-1d-20240621_20240621-nrt.nc, Variable: sla\n",
+      "  Date: 2024-06-22 00:00:00\n",
+      "    File: cmems_sea_level-sla-1d-20240622_20240622-nrt.nc, Variable: sla\n",
+      "  Date: 2024-06-23 00:00:00\n",
+      "    File: cmems_sea_level-sla-1d-20240623_20240623-nrt.nc, Variable: sla\n",
+      "  Date: 2024-06-24 00:00:00\n",
+      "    File: cmems_sea_level-sla-1d-20240624_20240624-nrt.nc, Variable: sla\n",
       "Adt files:\n",
       "Bbp files:\n",
       "Pic files:\n",
@@ -783,7 +834,13 @@
       "  Date: 2024-06-20 00:00:00\n",
       "    File: viirs_suomi-chl_oc5_pic-1d-20240620_20240620-nrt.nc, Variable: pic\n",
       "  Date: 2024-06-21 00:00:00\n",
-      "    File: viirs_suomi-chl_oc5_pic-1d-20240621_20240621-nrt.nc, Variable: pic\n"
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240621_20240621-nrt.nc, Variable: pic\n",
+      "  Date: 2024-06-22 00:00:00\n",
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240622_20240622-nrt.nc, Variable: pic\n",
+      "  Date: 2024-06-23 00:00:00\n",
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240623_20240623-nrt.nc, Variable: pic\n",
+      "  Date: 2024-06-24 00:00:00\n",
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240624_20240624-nrt.nc, Variable: pic\n"
      ]
     }
    ],
@@ -884,60 +941,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Date progress...:   0%|          | 0/33 [00:00<?, ?it/s]"
+      "Date progress...:   0%|          | 0/36 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening file: olci_a_1km-CHL_OC4ME-1d-20240620_20240620-nrt.nc for variable: CHL_OC4ME\n",
-      "Appended data for CHL_OC4ME from file: olci_a_1km-CHL_OC4ME-1d-20240620_20240620-nrt.nc\n",
-      "Opening file: olci_b_1km-CHL_OC4ME-1d-20240620_20240620-nrt.nc for variable: CHL_OC4ME\n",
-      "Appended data for CHL_OC4ME from file: olci_b_1km-CHL_OC4ME-1d-20240620_20240620-nrt.nc\n",
-      "Opening file: viirs_noaa20-chl_oc5ci-1d-20240620_20240620-nrt.nc for variable: chl_oc5ci\n",
-      "Appended data for chl_oc5ci from file: viirs_noaa20-chl_oc5ci-1d-20240620_20240620-nrt.nc\n",
-      "Opening file: viirs_suomi-chl_oc5_pic-1d-20240620_20240620-nrt.nc for variable: chl_oc5\n",
-      "Appended data for chl_oc5 from file: viirs_suomi-chl_oc5_pic-1d-20240620_20240620-nrt.nc\n"
+      "Opening file: olci_a_1km-CHL_OC4ME-1d-20240622_20240622-nrt.nc for variable: CHL_OC4ME\n",
+      "Appended data for CHL_OC4ME from file: olci_a_1km-CHL_OC4ME-1d-20240622_20240622-nrt.nc\n",
+      "Opening file: olci_b_1km-CHL_OC4ME-1d-20240622_20240622-nrt.nc for variable: CHL_OC4ME\n",
+      "Appended data for CHL_OC4ME from file: olci_b_1km-CHL_OC4ME-1d-20240622_20240622-nrt.nc\n",
+      "Opening file: viirs_noaa20-chl_oc5ci-1d-20240622_20240622-nrt.nc for variable: chl_oc5ci\n",
+      "Appended data for chl_oc5ci from file: viirs_noaa20-chl_oc5ci-1d-20240622_20240622-nrt.nc\n",
+      "Opening file: viirs_suomi-chl_oc5_pic-1d-20240622_20240622-nrt.nc for variable: chl_oc5\n",
+      "Appended data for chl_oc5 from file: viirs_suomi-chl_oc5_pic-1d-20240622_20240622-nrt.nc\n",
+      "Averaged data for chl on 2024-06-22 00:00:00:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Date progress...:  94%|█████████▍| 31/33 [00:01<00:00, 25.22it/s]"
+      "Date progress...:  94%|█████████▍| 34/36 [00:45<00:02,  1.35s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Averaged data for chl on 2024-06-20 00:00:00:\n"
+      "Opening file: olci_a_1km-CHL_OC4ME-1d-20240623_20240623-nrt.nc for variable: CHL_OC4ME\n",
+      "Appended data for CHL_OC4ME from file: olci_a_1km-CHL_OC4ME-1d-20240623_20240623-nrt.nc\n",
+      "Opening file: olci_b_1km-CHL_OC4ME-1d-20240623_20240623-nrt.nc for variable: CHL_OC4ME\n",
+      "Appended data for CHL_OC4ME from file: olci_b_1km-CHL_OC4ME-1d-20240623_20240623-nrt.nc\n",
+      "Opening file: viirs_noaa20-chl_oc5ci-1d-20240623_20240623-nrt.nc for variable: chl_oc5ci\n",
+      "Appended data for chl_oc5ci from file: viirs_noaa20-chl_oc5ci-1d-20240623_20240623-nrt.nc\n",
+      "Opening file: viirs_suomi-chl_oc5_pic-1d-20240623_20240623-nrt.nc for variable: chl_oc5\n",
+      "Appended data for chl_oc5 from file: viirs_suomi-chl_oc5_pic-1d-20240623_20240623-nrt.nc\n",
+      "Averaged data for chl on 2024-06-23 00:00:00:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "Date progress...:  97%|█████████▋| 35/36 [01:28<00:03,  3.00s/it]"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'df_filtered' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 133\u001b[0m\n\u001b[0;32m    131\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m obj_type, symbol \u001b[38;5;129;01min\u001b[39;00m object_symbols\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m    132\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m obj_type \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFloat\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m--> 133\u001b[0m         type_data \u001b[38;5;241m=\u001b[39m \u001b[43mdf_filtered\u001b[49m[df_filtered[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplatform_type\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m obj_type]\n\u001b[0;32m    134\u001b[0m         unique_names \u001b[38;5;241m=\u001b[39m type_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplatform_id\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39munique()\n\u001b[0;32m    135\u001b[0m         obj_data \u001b[38;5;241m=\u001b[39m type_data\u001b[38;5;241m.\u001b[39msort_values(by\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m, ascending\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df_filtered' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening file: olci_a_1km-CHL_OC4ME-1d-20240624_20240624-nrt.nc for variable: CHL_OC4ME\n",
+      "Appended data for CHL_OC4ME from file: olci_a_1km-CHL_OC4ME-1d-20240624_20240624-nrt.nc\n",
+      "Opening file: olci_b_1km-CHL_OC4ME-1d-20240624_20240624-nrt.nc for variable: CHL_OC4ME\n",
+      "Appended data for CHL_OC4ME from file: olci_b_1km-CHL_OC4ME-1d-20240624_20240624-nrt.nc\n",
+      "Opening file: viirs_noaa20-chl_oc5ci-1d-20240624_20240624-nrt.nc for variable: chl_oc5ci\n",
+      "Appended data for chl_oc5ci from file: viirs_noaa20-chl_oc5ci-1d-20240624_20240624-nrt.nc\n",
+      "Opening file: viirs_suomi-chl_oc5_pic-1d-20240624_20240624-nrt.nc for variable: chl_oc5\n",
+      "Appended data for chl_oc5 from file: viirs_suomi-chl_oc5_pic-1d-20240624_20240624-nrt.nc\n",
+      "Averaged data for chl on 2024-06-24 00:00:00:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Date progress...: 100%|██████████| 36/36 [02:27<00:00,  4.11s/it]\n",
+      "Date progress...: 0it [00:00, ?it/s]\n",
+      "Date progress...: 0it [00:00, ?it/s]\n",
+      "Date progress...:   0%|          | 0/31 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening file: viirs_suomi-chl_oc5_pic-1d-20240622_20240622-nrt.nc for variable: pic\n",
+      "Appended data for pic from file: viirs_suomi-chl_oc5_pic-1d-20240622_20240622-nrt.nc\n",
+      "Averaged data for pic on 2024-06-22 00:00:00:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Date progress...:  94%|█████████▎| 29/31 [01:29<00:06,  3.09s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening file: viirs_suomi-chl_oc5_pic-1d-20240623_20240623-nrt.nc for variable: pic\n",
+      "Appended data for pic from file: viirs_suomi-chl_oc5_pic-1d-20240623_20240623-nrt.nc\n",
+      "Averaged data for pic on 2024-06-23 00:00:00:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Date progress...:  97%|█████████▋| 30/31 [03:00<00:07,  7.19s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening file: viirs_suomi-chl_oc5_pic-1d-20240624_20240624-nrt.nc for variable: pic\n",
+      "Appended data for pic from file: viirs_suomi-chl_oc5_pic-1d-20240624_20240624-nrt.nc\n",
+      "Averaged data for pic on 2024-06-24 00:00:00:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Date progress...: 100%|██████████| 31/31 [04:29<00:00,  8.69s/it]\n"
      ]
     }
    ],
@@ -1074,6 +1202,9 @@
     "            # Process each unique object type\n",
     "            for obj_type, symbol in object_symbols.items():\n",
     "                if obj_type == 'Float':\n",
+    "                    date_of_plot_filter = datetime.strptime(date_of_plot, '%Y-%m-%d')\n",
+    "                    date_of_plot_filter_plus_one = date_of_plot_filter + pd.Timedelta(days=1)\n",
+    "                    df_filtered = df[df['date'] <= date_of_plot_filter_plus_one]\n",
     "                    type_data = df_filtered[df_filtered['platform_type'] == obj_type]\n",
     "                    unique_names = type_data['platform_id'].unique()\n",
     "                    obj_data = type_data.sort_values(by='date', ascending=False)\n",
