Updates for KML file creation from current data

--- a/Python_notebooks/BGC_ARGO_Float_download.ipynb
+++ b/Python_notebooks/BGC_ARGO_Float_download.ipynb
@@ -389,7 +389,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 93/93 [00:27<00:00,  3.43it/s]\n"
+      "100%|██████████| 93/93 [00:29<00:00,  3.11it/s]\n"
      ]
     },
     {
@@ -749,7 +749,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 98/98 [00:30<00:00,  3.17it/s]"
+      "100%|██████████| 98/98 [00:22<00:00,  4.40it/s]"
      ]
     },
     {
@@ -864,6 +864,7 @@
       "39   2024-06-07 22:00:42.002360320\n",
       "40   2024-06-17 20:35:58.002196480\n",
       "41   2024-06-27 19:19:01.002065920\n",
+      "42   2024-07-07 17:34:52.001873408\n",
       "Name: JULD, dtype: datetime64[ns]\n",
       "0    2023-06-19 21:24:08.000001536\n",
       "1    2023-06-20 14:53:21.999997952\n",
@@ -876,23 +877,7 @@
       "62   2024-06-24 13:25:17.004186112\n",
       "63   2024-06-29 13:29:16.008684544\n",
       "64   2024-07-04 13:27:17.008432128\n",
-      "Name: JULD, Length: 65, dtype: datetime64[ns]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_38440\\1868000719.py:37: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  last_position_df = pd.concat([last_position_df, last_temp_df], ignore_index=True)\n",
-      "C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_38440\\1868000719.py:38: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  position_df = pd.concat([position_df, temp_df], ignore_index=True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Name: JULD, Length: 65, dtype: datetime64[ns]\n",
       "0   2024-06-22 12:46:00\n",
       "1   2024-06-23 12:40:00\n",
       "2   2024-06-24 12:36:00\n",
@@ -901,7 +886,19 @@
       "5   2024-06-27 12:36:00\n",
       "6   2024-06-30 00:40:00\n",
       "7   2024-07-02 12:15:00\n",
+      "8   2024-07-05 00:35:00\n",
+      "9   2024-07-07 12:09:00\n",
       "Name: JULD, dtype: datetime64[ns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_17828\\1868000719.py:37: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  last_position_df = pd.concat([last_position_df, last_temp_df], ignore_index=True)\n",
+      "C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_17828\\1868000719.py:38: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  position_df = pd.concat([position_df, temp_df], ignore_index=True)\n"
      ]
     }
    ],
@@ -956,12 +953,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/88 [00:00<?, ?it/s]C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_38440\\1523172333.py:48: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  0%|          | 0/88 [00:00<?, ?it/s]C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_17828\\1523172333.py:48: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  compiled_101 = pd.concat([compiled_101, temp_df], ignore_index= True)\n",
-      "100%|██████████| 88/88 [00:01<00:00, 69.59it/s]\n",
-      "  0%|          | 0/93 [00:00<?, ?it/s]C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_38440\\1523172333.py:65: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "100%|██████████| 88/88 [00:01<00:00, 77.86it/s]\n",
+      "  0%|          | 0/93 [00:00<?, ?it/s]C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_17828\\1523172333.py:65: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  compiled_102 = pd.concat([compiled_102, temp_df], ignore_index= True)\n",
-      "100%|██████████| 93/93 [00:01<00:00, 66.26it/s]\n"
+      "100%|██████████| 93/93 [00:01<00:00, 63.65it/s]\n"
      ]
     }
    ],
