--- a/Python_notebooks/CMEMS_data_download.ipynb
+++ b/Python_notebooks/CMEMS_data_download.ipynb
@@ -63,78 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CMEMS_cmems_mod_glo_phy-cur_anfc_0.083deg_P1D-m_April-May2024.nc does not exist. Proceeding to download.\n",
-      "INFO - 2024-07-08T08:46:11Z - Dataset version was not specified, the latest one was selected: \"202406\"\n",
-      "INFO - 2024-07-08T08:46:11Z - Dataset part was not specified, the first one was selected: \"default\"\n",
-      "INFO - 2024-07-08T08:46:18Z - Service was not specified, the default one was selected: \"arco-time-series\"\n",
-      "INFO - 2024-07-08T08:46:21Z - Downloading using service arco-time-series...\n",
-      "INFO - 2024-07-08T08:46:24Z - <xarray.Dataset> Size: 188MB\n",
-      "Dimensions:    (depth: 35, latitude: 133, longitude: 361, time: 14)\n",
-      "Coordinates:\n",
-      "  * depth      (depth) float32 140B 0.494 1.541 2.646 ... 643.6 763.3 902.3\n",
-      "  * latitude   (latitude) float32 532B 55.0 55.08 55.17 ... 65.83 65.92 66.0\n",
-      "  * longitude  (longitude) float32 1kB -35.0 -34.92 -34.83 ... -5.083 -5.0\n",
-      "  * time       (time) datetime64[ns] 112B 2024-06-25 2024-06-26 ... 2024-07-08\n",
-      "Data variables:\n",
-      "    uo         (time, depth, latitude, longitude) float32 94MB dask.array<chunksize=(14, 2, 32, 64), meta=np.ndarray>\n",
-      "    vo         (time, depth, latitude, longitude) float32 94MB dask.array<chunksize=(14, 2, 32, 64), meta=np.ndarray>\n",
-      "Attributes:\n",
-      "    Conventions:               CF-1.8\n",
-      "    area:                      Global\n",
-      "    contact:                   https://marine.copernicus.eu/contact\n",
-      "    credit:                    E.U. Copernicus Marine Service Information (CM...\n",
-      "    institution:               Mercator Ocean International\n",
-      "    licence:                   http://marine.copernicus.eu/services-portfolio...\n",
-      "    producer:                  CMEMS - Global Monitoring and Forecasting Centre\n",
-      "    references:                http://marine.copernicus.eu\n",
-      "    source:                    MOI GLO12\n",
-      "    title:                     daily mean fields from Global Ocean Physics An...\n",
-      "    copernicusmarine_version:  1.2.2\n",
-      "INFO - 2024-07-08T08:46:24Z - Estimated size of the dataset file is 179.591 MB.\n",
-      "Do you want to proceed with download? [Y/n]:INFO - 2024-07-08T08:46:28Z - Writing to local storage. Please wait...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 8894/8894 [01:29<00:00, 99.45it/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO - 2024-07-08T08:48:01Z - Successfully downloaded to c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_cmems_mod_glo_phy-cur_anfc_0.083deg_P1D-m_April-May2024.nc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# List of datasets to extract\n",
     "datasets_to_extract = [\n",
     "    'cmems_obs-oc_atl_bgc-plankton_nrt_l3-multi-1km_P1D',        # Chla\n",
     "    'cmems_obs-oc_atl_bgc-optics_nrt_l3-multi-1km_P1D',          # bbp\n",
-    "    'cmems_obs-sl_eur_phy-ssh_nrt_allsat-l4-duacs-0.125deg_P1D', # currents\n",
+    "    'cmems_obs-sl_eur_phy-ssh_nrt_allsat-l4-duacs-0.125deg_P1D', # currents   (higher res, low(ish) scope)\n",
     "    'cmems_mod_glo_bgc-car_anfc_0.25deg_P1D-m',                  # carbonate\n",
-    "    'cmems_obs_mob_glo_phy-cur_nrt_0.25deg_P1D-m']               # currents 2\n",
-    "\n",
-    "datasets_to_extract = [\n",
-    "    'cmems_mod_glo_phy-cur_anfc_0.083deg_P1D-m'\n",
-    "]\n",
+    "    'cmems_obs_mob_glo_phy-cur_nrt_0.25deg_P1D-m',               # currents 2 (low res, wider scope)\n",
+    "    'cmems_mod_glo_phy-cur_anfc_0.083deg_P1D-m']                 # currents 3 (modelled product)\n",
     "\n",
     "# Directory setup\n",
     "parent_dir = os.path.abspath(os.path.join(os.getcwd(), os.pardir))\n",
@@ -142,7 +82,7 @@
     "satellite_dir = os.path.join(data_dir, 'satellite')\n",
     "\n",
     "# Date and time setup\n",
-    "start_time = \"2024-06-25T00:00:00\"  # Format time as YYYY-MM-DD\"T\"HH:MM:SS\n",
+    "start_time = \"2024-07-08T00:00:00\"  # Format time as YYYY-MM-DD\"T\"HH:MM:SS\n",
     "now = datetime.now()\n",
     "end_time = now.strftime(\"%Y-%m-%dT%H:%M:%S\")\n",
     "\n",
